# LLM-Extraction

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  quotes.json
.github/workflows/: ci.yml
src/: __init__.py  config.py  models.py  pipeline.py
src/api/: __init__.py  app.py
src/components/: __init__.py  extractor.py  loader.py  normalizer.py  reviewer.py  validator.py  writer.py
src/llm/: __init__.py  anthropic_adapter.py  base.py  call_log.py  mock_adapter.py  openrouter_adapter.py  prompts.py
tests/: test_config.py  test_loader.py  test_normalizer.py  test_pipeline.py  test_reviewer.py  test_validator.py
